--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 #img_input {
   position: relative;
@@ -292,7 +292,7 @@ body {
 }
 #set_size{
   position: relative;
-  width: 90%;
+  width: 190px;
   height: 80%;
   border-radius: 5px;
   display: flex;
