--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
   overflow: hidden;
 }
 :root {
-  --width: 300px;
-  --height: 300px;
+  --width: 0;
+  --height: 0;
   --sl: 25px;
   --sr: 25px;
   --st: 25px;
@@ -421,6 +421,7 @@ body {
   background: #00ff00;
   padding: 8px 20px;
   color: #fff;
+  text-align: center;
   box-shadow: 0 0 8px #000;
   border-bottom: 5px solid #00801a;
   font-weight: 900;
@@ -434,4 +435,64 @@ body {
 #pvu_btn.active p {
   font-size: 1.1rem;
   box-shadow: 0 0 3px #000;
+}
+#instraction{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  display: none;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+#instraction section{
+  position: relative;
+  width: 320px;
+  height: 110px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px #000 solid;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #000;
+  border-bottom: 5px solid #333;
+}
+#instraction section h1{
+  position: relative;
+  color: #fff;
+  width: 25px;
+  height: 25px;
+  border-radius: 100px;
+  text-align: center;
+  background: #f00;
+}
+#instraction section i{
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+#instraction section span{
+  position: relative;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+#instraction section span #i_know{
+  margin: 0 20px;
+  padding: 2px 10px;
+  background: #0d00ff;
+  color: #fff;
+  font-weight: 800;
+  border-radius: 5px;
+  border-bottom: 3px #260080 solid;
+  box-shadow: 2px 2px 5px #000;
+}
+#i_know:hover {
+  font-size: 0.9rem;
 }
