--- a/style.css
+++ b/style.css
@@ -404,10 +404,14 @@ body {
   margin: 10px 60px;
 }
 #download_btn p {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  display: grid;
+  place-items: center;
   font-size: 1.2rem;
   border-radius: 50px;
   background: #ffcc00;
-  padding: 8px 20px;
   color: #000;
   box-shadow: 0 0 8px #000;
   border-bottom: 5px solid #ff6f00;
@@ -658,7 +662,6 @@ body {
   position: relative;
   width: 320px;
   height: auto;
-  /* background: #282a38; */
   display: flex;
   justify-content: center;
   align-items: center;
